public enum EstadoTurno {
    PENDIENTE,
    ATENDIDO,
    CANCELADO
}
